# hps-lumi-calculator

./: README.md  pyproject.toml
data/: sheet.csv
file_list_creation/: mklist.py
file_list_creation/inputs/: batch_1.txt
hps_lumi_calculator/: __init__.py  calculator.py  cli.py
job_creation/inputs/: batch_2.txt  batch_3.txt  batch_4.txt  batch_5.txt  batch_6.txt
stats/: file_timestamps.py  swif2_status.py
